Fix navbar on iOS

--- a/app/styles/navigation.scss
+++ b/app/styles/navigation.scss
@@ -25,3 +25,9 @@
     z-index:20;
   }
 }
+
+.cordova .navbar {
+  padding-top: 20px;
+  height: $navbar-height-mobile +20px;
+  line-height: $navbar-height-mobile +20px;
+}
